began updating default template

--- a/app/_layouts/default.html
+++ b/app/_layouts/default.html
@@ -16,6 +16,28 @@
 
     </head>
     <body>
+        <header class="SiteHeader">
+          <div class="SiteHeader-main">
+            <div class="SiteHeader-right">
+              <h1 class="SiteHeader-title"><a href="/">{{ site.name }}</a></h1>
+            </div>
+            <div class="Siteheader-left">
+              <nav class="WebProfiles">
+                <a href="https://github.com/andrewlaskey">github.com/andrewlaskey</a>
+                <a href="https://twitter.com/andrewlaskey">@andrewlaskey</a>
+                <a href="https://dribbble.com/andrewlaskey">dribbble.com/andrewlaskey</a>
+                <a href="http://www.linkedin.com/pub/andrew-laskey/1/644/280">LinkedIn</a>
+              </nav>
+            </div>
+          </div>
+          <div class="Siteheader-nav">
+            <nav class="MainNav">
+              <a href="#">WORK</a>
+              <a href="#">BLOG</a>
+              <a href="#">ABOUT ME</a>
+            </nav>
+          </div>
+        </header>
 
         <div class="site">
           <div class="header">
