--- a/app/_layouts/default.html
+++ b/app/_layouts/default.html
@@ -24,10 +24,10 @@
             </div>
             <div class="Siteheader-left">
               <nav class="WebProfiles">
-                <a href="https://github.com/andrewlaskey">github.com/andrewlaskey</a>
-                <a href="https://twitter.com/andrewlaskey">@andrewlaskey</a>
-                <a href="https://dribbble.com/andrewlaskey">dribbble.com/andrewlaskey</a>
-                <a href="http://www.linkedin.com/pub/andrew-laskey/1/644/280">LinkedIn</a>
+                <a href="https://github.com/andrewlaskey"><i class="icon-github"></i>github.com/andrewlaskey</a>
+                <a href="https://twitter.com/andrewlaskey"><i class="icon-twitter"></i>@andrewlaskey</a>
+                <a href="https://dribbble.com/andrewlaskey"><i class="icon-dribbble"></i>dribbble.com/andrewlaskey</a>
+                <a href="http://www.linkedin.com/pub/andrew-laskey/1/644/280"><i class="icon-linkedin"></i>LinkedIn</a>
               </nav>
             </div>
           </div>
