--- a/app/_scss/main.scss
+++ b/app/_scss/main.scss
@@ -1,5 +1,12 @@
+@import "bourbon/bourbon";
+
 @import "base/normalize";
 @import "base/syntax";
 @import "base/vertical-rhythm";
 @import "base/google-fonts";
 @import "base/icons";
+
+@import "utilities/text";
+
+@import "components/grid";
+@import "components/site-header";
