--- a/app/_scss/base/_google-fonts.scss
+++ b/app/_scss/base/_google-fonts.scss
@@ -1,5 +1,5 @@
 html {
-	font-family: 'Source Sans Pro', sans-serif;
+	font-family: 'Source Sans Pro', $helvetica;
 }
 
 h1,
@@ -7,5 +7,5 @@ h2,
 h3,
 h4,
 h5 {
-	font-family: 'Noto Serif', serif;
+	font-family: 'Noto Serif', $georgia;
 }
