--- a/app/_layouts/default.html
+++ b/app/_layouts/default.html
@@ -8,8 +8,6 @@
         <meta name="viewport" content="width=device-width">
 
         <!-- build:css({app,.tmp}) /css/main.css -->
-        <!-- Syntax highlighting CSS -->
-        <link rel="stylesheet" href="/css/syntax.css">
 
         <!-- Custom CSS -->
         <link rel="stylesheet" href="/css/main.css">
@@ -19,7 +17,7 @@
     <body>
         <header class="Grid">
           <div class="Grid-col-half">
-            <h1 class="HeaderTitle beta"><a href="/">{{ site.name }}</a></h1>
+            <h1 class="HeaderTitle beta"><a href="/"><span class="Logo"></span>{{ site.name }}</a></h1>
           </div>
           <div class="Grid-col-half">
             <div class="HeaderNav">
@@ -30,10 +28,10 @@
               </nav>
             </div>
             <nav class="HeaderSocial">
-              <a href="https://github.com/andrewlaskey"><i class="icon-github"></i><span class="u-screenReader">github.com/andrewlaskey</span></a>
-              <a href="https://twitter.com/andrewlaskey"><i class="icon-twitter"></i><span class="u-screenReader">@andrewlaskey</span></a>
-              <a href="https://dribbble.com/andrewlaskey"><i class="icon-dribbble"></i><span class="u-screenReader">dribbble.com/andrewlaskey</span></a>
-              <a href="http://www.linkedin.com/pub/andrew-laskey/1/644/280"><i class="icon-linkedin"></i><span class="u-screenReader">LinkedIn</span></a>
+              <a href="https://github.com/andrewlaskey"><i class="icon-github delta"></i><span class="u-screenReader">github.com/andrewlaskey</span></a>
+              <a href="https://twitter.com/andrewlaskey"><i class="icon-twitter delta"></i><span class="u-screenReader">@andrewlaskey</span></a>
+              <a href="https://dribbble.com/andrewlaskey"><i class="icon-dribbble delta"></i><span class="u-screenReader">dribbble.com/andrewlaskey</span></a>
+              <a href="http://www.linkedin.com/pub/andrew-laskey/1/644/280"><i class="icon-linkedin delta"></i><span class="u-screenReader">LinkedIn</span></a>
             </nav>
           </div>
         </header>
