--- a/app/_scss/components/_site-header.scss
+++ b/app/_scss/components/_site-header.scss
@@ -6,12 +6,112 @@ $header-height: 2rem;
 
 .HeaderTitle,
 .HeaderNav {
-	margin: 1rem 0;
+	margin: 1rem 0 0.5rem;
 	height: $header-height;
 	line-height: $header-height;
+
+	a {
+		color: $header-color;
+	}
 }
 
 .HeaderNav,
 .HeaderSocial {
 	text-align: right;
+}
+
+.HeaderTitle,
+.HeaderNav,
+.HeaderSocial {
+	a {
+		text-decoration: none;
+	}
+}
+
+.HeaderNav a {
+	margin: 0 0.5em;
+
+	&:last-child {
+		margin-right: 0; 
+	}
+
+	&:hover {
+		color: #111;
+	}
+}
+
+.HeaderSocial {
+	float: right;
+	padding: 0.5rem 0 0 2rem;
+	border-top: 1px solid $green;
+}
+
+.HeaderSocial a {
+	margin: 0 3px;
+	color: $social-link-color;
+
+	&:last-child {
+		margin-right: 0; 
+	}
+
+	&:hover {
+		color: darken($social-link-color, 10%);
+	}
+}
+
+.HeaderTitle {
+	&:hover {
+		.Logo {
+
+			&:before {
+				transform: translate(50%,-20%);
+			}
+
+			&:after {
+				transform: translate(-100%,150%);
+			}
+		}
+	}
+}
+
+$triangleSize: 20px;
+$triangleSize-small: 15px;
+.Logo {
+	float: left;
+	position: relative;
+	margin: 0 0.3rem 0 0;
+	width: 0; 
+	height: 0; 
+	border-bottom: $triangleSize * 1.6 solid rgba($logo-color,0.34); 
+	border-left: $triangleSize solid transparent; 
+	border-right: $triangleSize solid transparent;
+	-webkit-backface-visibility: visible;
+
+	&:before {
+		content: '';
+		position: absolute;
+		display: block;
+		width: 0; 
+		height: 0; 
+		border-bottom: ($triangleSize * 1.6)*0.6 solid rgba($logo-color,0.34); 
+		border-left: $triangleSize*0.6 solid transparent; 
+		border-right: $triangleSize*0.6 solid transparent;
+		top: 7px;
+		left: -8px;
+		transition: transform 0.2s ease;
+	}
+
+	&:after {
+		content: '';
+		position: absolute;
+		display: block;
+		width: 0; 
+		height: 0; 
+		border-bottom: ($triangleSize * 1.6)*0.3 solid rgba($logo-color,0.34); 
+		border-left: $triangleSize*0.3 solid transparent; 
+		border-right: $triangleSize*0.3 solid transparent;
+		top: 12px;
+		left: -4px;
+		transition: transform 0.2s ease;
+	}
 }
