replaced some styles with bitters

--- a/app/_layouts/default.html
+++ b/app/_layouts/default.html
@@ -17,7 +17,7 @@
     <body>
         <header class="Grid">
           <div class="Grid-col-half">
-            <h1 class="HeaderTitle beta"><a href="/"><span class="Logo"></span>{{ site.name }}</a></h1>
+            <h1 class="HeaderTitle u-h3"><a href="/"><span class="Logo"></span>{{ site.name }}</a></h1>
           </div>
           <div class="Grid-col-half">
             <div class="HeaderNav">
@@ -47,7 +47,7 @@
         <div class="Grid">
           <div class="Grid-col-full">
             <div class="contact">
-              <p>This site is made with Jekyll, Yeoman, and Bourbon.</p>
+              <p><small>This site is made with <a href="http://jekyllrb.com/">Jekyll</a>, <a href="http://yeoman.io/">Yeoman</a>, and <a href="http://bourbon.io/">Bourbon</a>. Check out the code on <a href="https://github.com/andrewlaskey/jekyll-blog">GitHub</a>.</small></p>
             </div>
           </div>
         </div>
