--- a/app/_scss/main.scss
+++ b/app/_scss/main.scss
@@ -1,11 +1,10 @@
-@import "bourbon/bourbon";
-
-@import "base/settings";
-
 @import "base/normalize";
+
+@import "bourbon/bourbon";
+@import "bitters/bitters";
+
+@import "base/placeholders";
 @import "base/syntax";
-@import "base/vertical-rhythm";
-@import "base/google-fonts";
 @import "base/icons";
 @import "base/general";
 
