--- a/app/_scss/components/_site-header.scss
+++ b/app/_scss/components/_site-header.scss
@@ -43,7 +43,7 @@ $header-height: 2rem;
 .HeaderSocial {
 	float: right;
 	padding: 0.5rem 0 0 2rem;
-	border-top: 1px solid $green;
+	@extend %default-border-top;
 }
 
 .HeaderSocial a {
