added footer and other styles

--- a/app/_layouts/default.html
+++ b/app/_layouts/default.html
@@ -15,11 +15,11 @@
 
     </head>
     <body>
-        <header class="Grid">
-          <div class="Grid-col-half">
+        <header class="SiteHeader">
+          <div class="SiteHeader-left">
             <h1 class="HeaderTitle u-h3"><a href="/"><span class="Logo"></span>{{ site.name }}</a></h1>
           </div>
-          <div class="Grid-col-half">
+          <div class="SiteHeader-right">
             <div class="HeaderNav">
               <nav class="MainNav">
                 <a href="#">WORK</a>
@@ -44,11 +44,9 @@
           </div>
         </div>
 
-        <div class="Grid">
-          <div class="Grid-col-full">
-            <div class="contact">
-              <p><small>This site is made with <a href="http://jekyllrb.com/">Jekyll</a>, <a href="http://yeoman.io/">Yeoman</a>, and <a href="http://bourbon.io/">Bourbon</a>. Check out the code on <a href="https://github.com/andrewlaskey/jekyll-blog">GitHub</a>.</small></p>
-            </div>
+        <div class="SiteFooter">
+          <div class="SiteFooter-inner">
+            <p><small>This site is made with <a href="http://jekyllrb.com/">Jekyll</a>, <a href="http://yeoman.io/">Yeoman</a>, and <a href="http://bourbon.io/">Bourbon</a>. Check out the code on <a href="https://github.com/andrewlaskey/jekyll-blog">GitHub</a>.</small></p>
           </div>
         </div>
 
