--- a/app/_scss/main.scss
+++ b/app/_scss/main.scss
@@ -11,3 +11,5 @@
 
 @import "components/grid";
 @import "components/site-header";
+@import "components/site-footer";
+@import "components/page-content";
