--- a/app/_scss/base/_placeholders.scss
+++ b/app/_scss/base/_placeholders.scss
@@ -5,3 +5,21 @@
 %default-border-top {
 	border-top: 1px solid $base-border-color;
 }
+
+%full-width {
+	margin: 0 auto;
+	padding: 0 1em;
+	width: 100%;
+	max-width: 44rem;
+	@include clearfix;
+}
+
+%half-column {
+	float: left;
+	width: 50%;
+
+	@media #{$break-medium} {
+		float: none;
+		width: 100%;
+	}
+}
