fixed layout and typography

--- a/app/_layouts/default.html
+++ b/app/_layouts/default.html
@@ -17,7 +17,7 @@
     <body>
         <header class="SiteHeader">
           <div class="SiteHeader-left">
-            <h1 class="HeaderTitle u-h3"><a href="/"><span class="Logo"></span>{{ site.name }}</a></h1>
+            <h1 class="HeaderTitle u-h5"><a href="/"><span class="Logo"></span>{{ site.name }}</a></h1>
           </div>
           <div class="SiteHeader-right">
             <div class="HeaderNav">
@@ -36,12 +36,10 @@
           </div>
         </header>
 
-        <div class="Grid">
-          <div class="Grid-col-full">
+        <div class="PageContent">
 
-            {{ content }}
+          {{ content }}
 
-          </div>
         </div>
 
         <div class="SiteFooter">
