--- a/app/_scss/bitters/_typography.scss
+++ b/app/_scss/bitters/_typography.scss
@@ -4,6 +4,10 @@ body {
   font-size: $base-font-size;
   -webkit-font-smoothing: antialiased;
   line-height: $base-line-height;
+
+  @media #{$break-small} {
+    font-size: 1em;
+  }
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -102,5 +106,15 @@ cite {
 
   &:before {
     content: '\2014 \00A0';
+  }
+}
+
+.highlight {
+  background: $light-gray !important;
+  margin: 0 0 ($base-line-height * .5);
+  padding: 1em;
+
+  pre {
+    margin: 0;
   }
 }
