--- a/app/_scss/bitters/_variables.scss
+++ b/app/_scss/bitters/_variables.scss
@@ -22,7 +22,7 @@ $break-medium: "only screen and (max-width : 47em)";
 // Colors
 ///////////////////////////////////////////////////////////////////////////////
 
-$dark-gray: #333;
+$dark-gray: #111;
 $medium-gray: #888;
 $light-gray: #f0f0f0;
 $light-red: #FBE3E4;
@@ -35,7 +35,7 @@ $blue: #5EA8C9;
 $turquoise: #09AAAF;
 
 // Body Color
-$base-body-color: white;
+$base-body-color: #fcfcfc;
 
 //  Font Colors
 $base-font-color: $dark-gray;
