--- a/app/_scss/bitters/_variables.scss
+++ b/app/_scss/bitters/_variables.scss
@@ -31,6 +31,7 @@ $light-green: #E6EFC2;
 
 $dark: #4d4d4d;
 $green: #4AC987;
+$green-light: #09AF6D;
 $blue: #5EA8C9;
 $turquoise: #09AAAF;
 
@@ -39,7 +40,7 @@ $base-body-color: #fcfcfc;
 
 //  Font Colors
 $base-font-color: $dark-gray;
-$base-accent-color: $turquoise;
+$base-accent-color: $green-light;
 
 //  Text Link Colors
 $base-link-color: $base-accent-color;
