added excerpt styles

--- a/app/_layouts/default.html
+++ b/app/_layouts/default.html
@@ -22,9 +22,9 @@
           <div class="SiteHeader-right">
             <div class="HeaderNav">
               <nav class="MainNav">
-                <a href="#">WORK</a>
-                <a href="#">BLOG</a>
-                <a href="#">ABOUT ME</a>
+                <a href="/">WORK</a>
+                <a href="{{ site.url }}/blog/">BLOG</a>
+                <a href="{{ site.url }}/about/">ABOUT ME</a>
               </nav>
             </div>
             <nav class="HeaderSocial">
