--- a/app/_scss/base/_placeholders.scss
+++ b/app/_scss/base/_placeholders.scss
@@ -23,3 +23,9 @@
 		width: 100%;
 	}
 }
+
+%background-stretch {
+	background-repeat: no-repeat;
+	background-position: center center;
+	background-size: cover;
+}
