--- a/app/_scss/components/_page-content.scss
+++ b/app/_scss/components/_page-content.scss
@@ -25,7 +25,7 @@
 		text-decoration: none;
 
 		.WorkExcerpt-preview {
-			transform: scale(1.2) rotate(5deg);
+			transform: scale(1.1);
 		}
 
 		.WorkExcerpt-mask {
