--- a/app/_scss/bitters/_typography.scss
+++ b/app/_scss/bitters/_typography.scss
@@ -23,23 +23,23 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 h1, .u-h1 {
-  font-size: $base-font-size * 2.25; // 16 * 2.25 = 36px
+  font-size: $base-font-size * 1.777;
 }
 
 h2, .u-h2 {
-  font-size: $base-font-size * 2; // 16 * 2 = 32px
+  font-size: $base-font-size * 1.555;
 }
 
 h3, .u-h3 {
-  font-size: $base-font-size * 1.75; // 16 * 1.75 = 28px
+  font-size: $base-font-size * 1.333;
 }
 
 h4, .u-h4 {
-  font-size: $base-font-size * 1.5; // 16 * 1.5 = 24px
+  font-size: $base-font-size * 1.2;
 }
 
 h5, .u-h5 {
-  font-size: $base-font-size * 1.25; // 16 * 1.25 = 20px
+  font-size: $base-font-size;
 }
 
 h6, .u-h6 {
@@ -129,7 +129,8 @@ article {
     list-style-type: disc;
   }
 
-  h1, h2, h3, h4 {
-    margin-bottom: ($base-line-height * .5);
+  h1, h2, h3 {
+    margin-bottom: 0.5em;
+    padding-top: 0.75em;
   }
 }
