--- a/app/_scss/bitters/_variables.scss
+++ b/app/_scss/bitters/_variables.scss
@@ -8,8 +8,8 @@ $header-font-family: 'Noto Serif', $base-font-family;
 
 // Sizes
 ///////////////////////////////////////////////////////////////////////////////
-$base-font-size: 1.2em;
-$base-line-height: $base-font-size * 1.2;
+$base-font-size: 1.2em; // 16 * 1.125 = 18px
+$base-line-height: 1.5em;
 $base-border-radius: em(3);
 
 $site-width: 38em;
